learning is good

--- a/app/src/main/res/layout/activity_new_mile_stone.xml
+++ b/app/src/main/res/layout/activity_new_mile_stone.xml
@@ -16,6 +16,7 @@
 
     <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
             android:layout_marginTop="68dp"
+            android:id="@+id/btn"
             android:text="this is only a button"
             app:layout_constraintTop_toBottomOf="@+id/tv_test" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="32dp"/>
