--- a/app/src/main/res/layout/activity_new_mile_stone.xml
+++ b/app/src/main/res/layout/activity_new_mile_stone.xml
@@ -9,6 +9,7 @@
 
     <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
               app:layout_constraintStart_toStartOf="parent"
+
               app:layout_constraintTop_toTopOf="parent"
               android:textSize="32sp"
               android:text="hello kotlin"
@@ -20,5 +21,10 @@
             android:text="this is only a button"
             app:layout_constraintTop_toBottomOf="@+id/tv_test" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="32dp"/>
+
+    <CheckBox
+            android:id="@+id/checkbox"
+            android:layout_width="wrap_content" android:layout_height="wrap_content"
+            tools:layout_editor_absoluteY="57dp" tools:layout_editor_absoluteX="116dp"/>
 
 </android.support.constraint.ConstraintLayout>
