--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -16,4 +16,7 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
 
+    <CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content"
+    android:id="@+id/cb"/>
+
 </android.support.constraint.ConstraintLayout>
